--- a/v3/style.css
+++ b/v3/style.css
@@ -15,44 +15,111 @@ body {
 }
 
 .hovers {
-    width: 50px;
-    height: 50px;
+    aspect-ratio: 1/1;
+    width: 100px;
     background-color: #323232;
-    color: black;
+    color: white;
     border-radius: 10%;
     align-items: center;
     justify-content: center;
     display: flex;
-    font-size: 22px;
-    font-family: Arial, Helvetica, sans-serif;
-    animation-duration: 0.3s;
+    font-size: 35px;
+    animation-duration: 0.5s;
     animation-name: unhover;
-    animation-fill-mode: forwards;
+    animation-fill-mode: both;
     cursor: pointer;
-
+    animation-timing-function: ease-in-out;
+    position: relative;
 }
+
+.hovers i {
+    opacity: 0.8;
+}
+
 
 @keyframes hover {
     0% {
+        --x: 100%;
+        --y: 100%;
+    }
+
+    30% {
+        --x: 50%;
+        --y: 100%;
+    }
+
+    40% {
+        --x: 0%;
+        --y: 100%;
+    }
+
+    50% {
+        --x: -50%;
+        --y: 50%;
+    }
+
+    60% {
         --x: 0%;
         --y: 0%;
     }
 
-    25% {
-        --x: 100%;
-        --y: 0%;
+    70% {
+        --x: 50%;
+        --y: -50%;
     }
 
     100% {
         --x: 100%;
-        --y: 100%;
+        --y: 0%;
     }
 }
 
 @keyframes unhover {
     0% {
         --x: 100%;
+        --y: 0%;
+    }
+
+    30% {
+        --x: 50%;
+        --y: -50%;
+    }
+
+    40% {
+        --x: 0%;
+        --y: 0%;
+    }
+
+    50% {
+        --x: -50%;
+        --y: 50%;
+    }
+
+    60% {
+        --x: 0%;
         --y: 100%;
+    }
+
+    70% {
+        --x: 50%;
+        --y: 100%;
+    }
+
+    100% {
+        --x: 100%;
+        --y: 100%;
+    }
+}
+
+@keyframes spin {
+    0% {
+        --x: 0%;
+        --y: 0%;
+    }
+
+    12.5% {
+        --x: 50%;
+        --y: -50%;
     }
 
     25% {
@@ -60,15 +127,43 @@ body {
         --y: 0%;
     }
 
+    37.5% {
+        --x: 150%;
+        --y: 50%;
+    }
+
+    50% {
+        --x: 100%;
+        --y: 100%;
+    }
+
+    62.5% {
+        --x: 50%;
+        --y: 150%;
+    }
+
+    75% {
+        --x: 0%;
+        --y: 100%;
+    }
+
+    87.5% {
+        --x: -50%;
+        --y: 50%;
+    }
+
     100% {
         --x: 0%;
         --y: 0%;
     }
+
 }
 
 .hovers:hover {
     animation-name: hover;
-    animation-fill-mode: forwards;
+    animation-fill-mode: both;
+    animation-timing-function: ease;
+    animation-duration: 0.5s;
 }
 
 .buttons {
@@ -76,22 +171,84 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 10px;
-    height: 100vh;
+    gap: 2vw;
+    height: 95vh;
 }
 
 .b1 {
-    background: radial-gradient(circle at var(--x) var(--y), #c2e812 0%, #91f5ad 100%);
+    background: radial-gradient(circle farthest-corner at var(--x) var(--y), #fff95b 5%, #ff930f 100%);
 }
 
 .b2 {
-    background: radial-gradient(circle at var(--x) var(--y), #4357AD 0%, #48A9A6 100%);
+    background: radial-gradient(circle farthest-corner at var(--x) var(--y), #40c9ff 5%, #e81cff 100%);
 }
 
 .b3 {
-    background: radial-gradient(circle at var(--x) var(--y), #8CFF98 0%, #AAD922 100%);
+    background: radial-gradient(circle farthest-corner at var(--x) var(--y), #00ee6e 5%, #0c75e6 100%);
 }
 
 .b4 {
-    background: radial-gradient(circle at var(--x) var(--y), #F97068 0%, #A30000 100%);
+    background: radial-gradient(circle farthest-corner at var(--x) var(--y), #ed71ad 5%, #7277f1 100%);
+}
+
+.overlay p {
+    color: transparent;
+    text-align: center;
+    position: absolute;
+    -webkit-text-stroke: white;
+    -webkit-text-stroke-width: 3px;
+    font-weight: 900;
+    font-family: 'Montserrat', sans-serif;
+    left: 50%;
+    font-size: 200px;
+    transform: translate(-50%, -300%);
+    z-index: -1;
+    animation-name: down;
+    animation-fill-mode: both;
+    animation-timing-function: ease;
+    animation-duration: 1s;
+}
+
+@keyframes down {
+    0% {
+        transform: translate(-50%, -300%);
+    }
+
+    100% {
+        transform: translate(-50%, -150%);
+    }
+}
+
+.main {
+    display: flex;
+    align-items: center !important;
+    justify-content: center !important;
+    height: 96vh;
+}
+
+
+.blur_bg {
+    position: absolute;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    width: 100%;
+    gap: 2vw;
+    height: 100%;
+    background-color: #141414;
+    z-index: -2;
+    filter: blur(15px);
+    -webkit-filter: blur(15px);
+}
+
+.blur_bg .hovers {
+    background-color: #323232;
+    border-radius: 10%;
+    width: 100px;
+    height: 100px;
+    animation-name: spin;
+    animation-fill-mode: both;
+    animation-timing-function: ease;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
 }
