--- a/v3/style.css
+++ b/v3/style.css
@@ -10,16 +10,13 @@
     initial-value: 0%;
 }
 
-body {
-    background-color: #141414;
-}
 
 .hovers {
     aspect-ratio: 1/1;
     width: 100px;
     background-color: #323232;
     color: white;
-    border-radius: 10%;
+    border-radius: 10px;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -31,6 +28,8 @@ body {
     animation-timing-function: ease-in-out;
     position: relative;
 }
+
+
 
 .hovers i {
     opacity: 0.8;
@@ -176,19 +175,19 @@ body {
 }
 
 .b1 {
-    background: radial-gradient(circle farthest-corner at var(--x) var(--y), #fff95b 5%, #ff930f 100%);
+    background: radial-gradient(circle farthest-corner at var(--x) var(--y), #F3F9A7 5%, #CAC531 100%);
 }
 
 .b2 {
-    background: radial-gradient(circle farthest-corner at var(--x) var(--y), #40c9ff 5%, #e81cff 100%);
+    background: radial-gradient(circle farthest-corner at var(--x) var(--y), #36D1DC 5%, #5B86E5 100%);
 }
 
 .b3 {
-    background: radial-gradient(circle farthest-corner at var(--x) var(--y), #00ee6e 5%, #0c75e6 100%);
+    background: radial-gradient(circle farthest-corner at var(--x) var(--y), #38ef7d 5%, #11998e 100%);
 }
 
 .b4 {
-    background: radial-gradient(circle farthest-corner at var(--x) var(--y), #ed71ad 5%, #7277f1 100%);
+    background: radial-gradient(circle farthest-corner at var(--x) var(--y), #DA22FF 5%, #9733EE 100%);
 }
 
 .overlay p {
@@ -228,27 +227,39 @@ body {
 
 
 .blur_bg {
-    position: absolute;
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    display: flex;
-    width: 100%;
     gap: 2vw;
-    height: 100%;
-    background-color: #141414;
-    z-index: -2;
+    height: 95vh;
+    position: absolute;
     filter: blur(15px);
     -webkit-filter: blur(15px);
+    z-index: -1;
 }
 
-.blur_bg .hovers {
+.blur_bg div {
+    aspect-ratio: 1/1;
+    position: relative;
     background-color: #323232;
-    border-radius: 10%;
+    border-radius: 10px;
     width: 100px;
-    height: 100px;
     animation-name: spin;
     animation-fill-mode: both;
     animation-timing-function: ease;
     animation-duration: 10s;
     animation-iteration-count: infinite;
+}
+
+.active {
+    aspect-ratio: 2/1 !important;
+    width: 200px !important;
+    justify-content: left !important;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.active i, .active p {
+    padding-left: 25px;
+    opacity: 0.8;
 }
