--- a/css/index/desc.css
+++ b/css/index/desc.css
@@ -1,73 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-@import url("https://site-assets.fontawesome.com/releases/v7.1.0/css/fontawesome.css");
-
-body {
-  background-color: #020202;
-  color: #ffffff;
-
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-
-  margin: 0;
-  padding: 0 10vw;
-
-  display: flex;
-  flex-direction: column;
-  gap: 2em;
-  min-height: 100vh;
-  justify-content: flex-start;
-}
-
-@media screen and (max-width: 900px) {
-  body {
-    padding: 0 3vw;
-  }
-}
-
-h1 {
-  font-size: 4em;
-}
-
-h1,
-h2,
-h3 {
-  margin: 0;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-  background-color: transparent;
-}
-
-.topbar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-
-  padding: 1em 1.7em;
-  margin-top: 1em;
-
-  border-radius: 10em;
-
-  font-size: 1.3em;
-}
-
-@media screen and (max-width: 900px) {
-  .topbar {
-    margin: 0 0;
-    margin-top: 1em;
-  }
-}
-
-.topbar > div {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 1em;
-}
-
 .bg {
   display: block;
   position: fixed;
@@ -91,11 +21,13 @@ a {
 
   margin-top: auto;
   margin-bottom: auto;
+  margin-left: 2vw;
 }
 
 @media screen and (max-width: 900px) {
   .main-c {
-    align-items: center;
+    margin-left: 0;
+    align-items: stretch;
   }
 }
 
@@ -108,7 +40,7 @@ a {
 
 @media screen and (max-width: 900px) {
   .category-c {
-    align-items: center;
+    align-items: stretch;
   }
 }
 
@@ -126,7 +58,7 @@ a {
 
 @media screen and (max-width: 900px) {
   .pill-c {
-    justify-content: center;
+    justify-content: flex-start;
   }
 }
 
@@ -147,7 +79,6 @@ a {
 .card-c {
   display: grid;
   grid-auto-flow: column;
-  grid-auto-columns: min-content(1fr);
   gap: 1em;
 
   max-width: 90vw;
@@ -173,9 +104,11 @@ a {
 
   font-size: 1.2em;
 
-  cursor: pointer;
-
   transition-duration: 0.3s;
+}
+
+.card[data-project-id], .card.more {
+  cursor: pointer;
 }
 
 @media screen and (max-width: 900px) {
@@ -196,7 +129,7 @@ a {
 
   transform: translateX(-10px);
 
-  transition: all 0.3s ease;
+  transition-duration: 0.3s;
 
   text-align: right;
 }
@@ -205,7 +138,8 @@ a {
   opacity: 1;
   transform: translateX(0);
 }
-.card[data-project-id]:hover {
+.card[data-project-id]:hover,
+.card.more:hover {
   background-color: color-mix(in srgb, var(--color) 5%, transparent 95%);
   box-shadow: 0 0 10px 2px color-mix(in srgb, var(--color) 15%, transparent 95%);
 }
@@ -242,12 +176,20 @@ a {
   justify-content: center;
 }
 
+.card.more:hover > .more > i {
+  transform: translateX(10px);
+}
+
 .card > .more {
   display: flex;
   flex-direction: column;
   gap: 1em;
   align-items: center;
   font-size: 1.2em;
+}
+
+.card.more > .more > i {
+  transition-duration: 0.3s;
 }
 
 @media screen and (max-width: 900px) {
