--- a/css/index/main.css
+++ b/css/index/main.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-@import url("https://site-assets.fontawesome.com/releases/v7.1.0/css/fontawesome.css");
+/* @import url("https://site-assets.fontawesome.com/releases/v7.1.0/css/fontawesome.css"); */
 
 @view-transition {
   navigation: auto;
