--- a/css/index/landing.css
+++ b/css/index/landing.css
@@ -2,8 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 1.3em;
-
   padding: 0 2vw;
 
   flex: 1;
@@ -12,6 +10,8 @@
 .card {
   display: flex;
   align-items: center;
+
+  padding: 0.3em;
 
   cursor: pointer;
 
@@ -25,4 +25,12 @@
   letter-spacing: 0.3em;
   font-size: 3em;
   font-weight: 200;
+}
+
+.sparkle {
+  position: absolute;
+
+  background: white;
+
+  z-index: -2;
 }
