--- a/css/index/main.css
+++ b/css/index/main.css
@@ -16,15 +16,10 @@ body {
   text-size-adjust: none;
 
   margin: 0;
-  padding: 0 2vw;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 2em;
 
   height: 100dvh;
+
+  overflow: hidden;
 }
 
 @media screen and (max-width: 900px) {
@@ -33,7 +28,20 @@ body {
     align-items: stretch;
     height: auto;
     min-height: 100dvh;
+    overflow: auto;
   }
+}
+
+#body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 2em;
+
+  padding: 0 2vw;
+
+  height: 100%;
 }
 
 h1 {
