--- a/css/index/main.css
+++ b/css/index/main.css
@@ -24,10 +24,10 @@ body {
 
 @media screen and (max-width: 900px) {
   body {
-    padding: 0 3vw;
-    align-items: stretch;
     height: auto;
     min-height: 100dvh;
+    align-items: center;
+
     overflow: auto;
   }
 }
@@ -41,7 +41,14 @@ body {
 
   padding: 0 2vw;
 
-  height: 100%;
+  height: 100dvh;
+}
+
+@media screen and (max-width: 900px) {
+  #body {
+    padding: 0 3vw;
+    align-items: stretch;
+  }
 }
 
 h1 {
